# datafun-03-analytics

./: All_stats.xlsx  README.md  hennelly_get_csv.py  hennelly_get_excel.py  hennelly_get_json.py  hennelly_get_text.py  hennelly_process_csv.py  hennelly_process_excel.py  hennelly_process_json.py  hennelly_process_text.py  hennelly_project3.py  main.py  print_excel_columns.py  pyproject.toml
data/: Feedback.xlsx  all_NCAA_data.xlsx  matches.json
hennelly_processed/: cody_schrader.txt  json_seasons_per_competition.txt  qb_par_stats.txt
